--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KPS Villa - Luxury Rental House</title>
+    <title>KPS Villa - Rental House</title>
     <style>
         * {
             margin: 0;
@@ -178,10 +178,10 @@
             <div class="section">
                 <h2>Location</h2>
                 <div class="map-container">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3022.1422937950147!2d-73.98731968459391!3d40.74844097932847!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c259a9b3117469%3A0xd134e199a405a163!2sEmpire%20State%20Building!5e0!3m2!1sen!2sus!4v1234567890" allowfullscreen loading="lazy"></iframe>
+                    <iframe src="<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1108.6917479448855!2d75.9012556240371!3d11.144469734981806!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1763314369856!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>" allowfullscreen loading="lazy"></iframe>
                 </div>
                 <p style="margin-top: 20px; font-size: 1.1em;">
-                    <strong>Address:</strong> 123 Paradise Lane, Beachside, CA 90210<br>
+                    <!-- <strong>Address:</strong> 123 Paradise Lane, Beachside, CA 90210<br> -->
                     <a href="https://maps.google.com/?q=Empire+State+Building" target="_blank" style="color: #667eea; text-decoration: none; font-weight: bold;">View on Google Maps →</a>
                 </p>
             </div>
