Update Google Maps link in index.html

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                 </div>
                 <p style="margin-top: 20px; font-size: 1.1em;">
                     <!-- <strong>Address:</strong> 123 Paradise Lane, Beachside, CA 90210<br> -->
-                    <a href="https://maps.google.com/?q=Empire+State+Building" target="_blank" style="color: #667eea; text-decoration: none; font-weight: bold;">View on Google Maps →</a>
+                    <a href="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1108.6917479448855!2d75.9012556240371!3d11.144469734981806!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1763314369856!5m2!1sen!2sin" target="_blank" style="color: #667eea; text-decoration: none; font-weight: bold;">View on Google Maps →</a>
                 </p>
             </div>
         </div>
