--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             <div class="section">
                 <h2>Location</h2>
                 <div class="map-container">
-                    <iframe src="<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1108.6917479448855!2d75.9012556240371!3d11.144469734981806!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1763314369856!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>" allowfullscreen loading="lazy"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1108.6917479448855!2d75.9012556240371!3d11.144469734981806!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1763314369856!5m2!1sen!2sin" allowfullscreen loading="lazy"></iframe>
                 </div>
                 <p style="margin-top: 20px; font-size: 1.1em;">
                     <!-- <strong>Address:</strong> 123 Paradise Lane, Beachside, CA 90210<br> -->
