Update video iframe source in index.html

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             <div class="section">
                 <h2>Video Tour</h2>
                 <div class="video-container">
-                    <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/VbBHqMWqpjA?si=8TH5o08qyVFguCEd" allowfullscreen></iframe>
                 </div>
             </div>
 
