--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             </div> -->
 
             <div class="section">
-                <h2>Video Tour</h2>
+                <!-- <h2>Video Tour</h2> -->
                 <div class="video-container">
                     <iframe src="https://www.youtube.com/embed/VbBHqMWqpjA?si=8TH5o08qyVFguCEd" allowfullscreen></iframe>
                 </div>
@@ -178,11 +178,11 @@
             <div class="section">
                 <h2>Location</h2>
                 <div class="map-container">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1108.6917479448855!2d75.9012556240371!3d11.144469734981806!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1763314369856!5m2!1sen!2sin" allowfullscreen loading="lazy"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3914.5864413718796!2d75.89904447504728!3d11.144146589027828!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTHCsDA4JzM4LjkiTiA3NcKwNTQnMDUuOCJF!5e0!3m2!1sen!2sin!4v1763315276183!5m2!1sen!2sin" allowfullscreen loading="lazy"></iframe>
                 </div>
                 <p style="margin-top: 20px; font-size: 1.1em;">
                     <!-- <strong>Address:</strong> 123 Paradise Lane, Beachside, CA 90210<br> -->
-                    <a href="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1108.6917479448855!2d75.9012556240371!3d11.144469734981806!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1763314369856!5m2!1sen!2sin" target="_blank" style="color: #667eea; text-decoration: none; font-weight: bold;">View on Google Maps →</a>
+                    <a href="https://maps.app.goo.gl/X624PynC6PT6BcQs7" target="_blank" style="color: #667eea; text-decoration: none; font-weight: bold;">View on Google Maps →</a>
                 </p>
             </div>
         </div>
