--- a/index.html
+++ b/index.html
@@ -192,7 +192,9 @@
             <p>OR</p>
             <a href="tel:+919042878909" class="cta-button" style="display: inline-block; margin-bottom: 20px;">📞 9042878909</a>
             <p>&copy; 2025 KPS Villa. All rights reserved.</p>
-            <!-- <p style="margin-top: 10px;">Contact: info@sunsetvilla.com | +1 (555) 123-4567</p> -->
+            <a href="https://in.linkedin.com/in/vipin-raj-kp" target="_blank" style="color: #a0aec0; text-decoration: none; transition: color 0.3s;">
+                Made with ❤️ by Vipin
+            </a>
         </footer>
     </div>
 </body>
