--- a/index.html
+++ b/index.html
@@ -191,9 +191,9 @@
             <a href="tel:+919746767161" class="cta-button" style="display: inline-block; margin-bottom: 20px;">📞 Call Now: 9746767161</a>
             <p>OR</p>
             <a href="tel:+919042878909" class="cta-button" style="display: inline-block; margin-bottom: 20px;">📞 9042878909</a>
-            <p>&copy; 2025 KPS Villa. All rights reserved.</p>
+            <!-- <p>&copy; 2025 KPS Villa. All rights reserved.</p> -->
             <a href="https://in.linkedin.com/in/vipin-raj-kp" target="_blank" style="color: #a0aec0; text-decoration: none; transition: color 0.3s;">
-                Made with ❤️ by Vipin
+                made by vipin
             </a>
         </footer>
     </div>
