--- a/index.html
+++ b/index.html
@@ -151,6 +151,15 @@
             }
         }
     </style>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-QQZYNSB9J0"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-QQZYNSB9J0');
+    </script>
 </head>
 <body>
     <div class="container">
