--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
             <a href="tel:+919042878909" class="cta-button" style="display: inline-block; margin-bottom: 20px;">📞 9042878909</a>
             <!-- <p>&copy; 2025 KPS Villa. All rights reserved.</p> -->
             <p></p>
-            <a href="https://in.linkedin.com/in/vipin-raj-kp" target="_blank" style="color: #a0aec0; text-decoration: none; transition: color 0.3s;">
+            <a href="https://in.linkedin.com/in/vipin-raj-kp" target="_blank" style="color: #3a465c; text-decoration: none; transition: color 0.3s;">
                 made by vipin
             </a>
         </footer>
